# hoyo_calendar

./: .gitignore  README.md  cli.py  config.py  main.py  model.py  new.py  pyproject.toml  requirements.txt  settings.py
.github/: FUNDING.yml
.github/workflows/: daily-refresh.yml  main.yml
clients/: __init__.py  hoyolab.py  miyoushe.py
configs/: genshin.toml  sr.toml  zzz.toml
data/: data.json
data/原神/: data.json
data/崩坏：星穹铁道/: data.json
data/绝区零/: data.json
docs/: .gitignore  .pnp.cjs  .yarnrc.yml  README.md  index.html  package.json
docs/src/: App.vue  main.js  style.css
dto/: __init__.py  ann_content.py  ann_list.py
exporters/: ics.py
games/: __init__.py  base.py  genshin.py  starrail.py  zenless.py
ics/: 原神-七圣召唤.ics  原神-任务限时奖励.ics  原神-前瞻特别节目.ics  原神-活动.ics  原神-版本更新.ics  原神-祈愿.ics  原神-衣装限时折扣.ics  原神.ics  崩坏：星穹铁道.ics  星铁-活动.ics  星铁-版本更新.ics  星铁-跃迁.ics  星铁.ics  绝区零-前瞻特别节目.ics  绝区零-活动.ics  绝区零-版本更新.ics  绝区零-调频.ics  绝区零.ics
ics/continuous/: 原神-七圣召唤.ics  原神-任务限时奖励.ics  原神-前瞻特别节目.ics  原神-活动.ics  原神-版本更新.ics  原神-祈愿.ics  原神-衣装限时折扣.ics  原神.ics  崩坏：星穹铁道.ics  星铁-活动.ics  星铁-跃迁.ics  星铁.ics  绝区零-前瞻特别节目.ics  绝区零-活动.ics  绝区零-版本更新.ics  绝区零-调频.ics  绝区零.ics
ics/原神/: 七圣召唤.ics  任务限时奖励.ics  前瞻特别节目.ics  活动.ics  版本更新.ics  祈愿.ics  衣装限时折扣.ics
ics/崩坏：星穹铁道/: 前瞻特别节目.ics  活动.ics  (+4 more)
models/: config.py  game.py
parsers/: __init__.py  games.py  text.py  time_extractors.py  version.py
services/: __init__.py  pipeline.py  special_program.py  storage.py
source/: 原神.txt  星铁.txt  绝区零.txt
utils/: logging.py
web/: index.html  index.html.checkbox  index.html.colored
(+93 files in other folders)
