[project]
name = "hoyo_calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "gitpython>=3.1.44",
    "httpx>=0.28.1",
    "icalendar>=6.3.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.5",
    "pytz>=2025.2",
]
